crates/tui/src/view/snapshots/tui__view__status_rows__tests__narrow_short.snap
---
source: crates/tui/src/view/status_rows_tests.rs
assertion_line: 390
expression: screen
---
one






>
test/model · $1.50
1 job running
