crates/tui/src/view/snapshots/tui__view__status_rows__tests__narrow_with_widget_open.snap
---
source: crates/tui/src/view/status_rows_tests.rs
assertion_line: 381
expression: screen
---
one

























▾ abc
def
>
test/model · $1.50 · abc
